use ProcessBuilder to decrease process setup time which causes TimeLimitExceeded; clear receive buffer;